--- a/index.html
+++ b/index.html
@@ -1,68 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEXUX</title>
-   <meta name= "description" content="Fundada em 2024 a NEXUX tem o próposito de oferecer a melhor solução web para o seu negócio">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #fffffffd;
-            color: #fff;
-            text-align:left;
-            padding: 1em 0;
-            position: relative;
-            margin: auto;
-        }
-        nav {
-            background-color: #000000;
-            color: #fff;
-            text-align:center;
-            padding: 0.5em 0;
-            text-align:center;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 0 1em;
-        }
-        section {
-            padding: 2em;
-            text-align: center;
-        }
-        footer {
-            background-color: #ffffff;
-            color: #000000;
-            text-align:left;
-            padding: 1em 0;
-            font-size: 10px;
-        }
-        nav a:hover{
-            background-color: grey;
-        }
-    </style>
+    <meta name="description" content="Fundada em 2024 a NEXUX tem o próposito de oferecer a melhor solução web para o seu negócio">
 </head>
 
 <body>
     <header>
-        <img src="/images/NEXUXl-logo.png" alt="NEXUX">
-        <nav>
-            <a href="index.html">Inicio</a>
+        <div class="img_container">
+            <img src="/images/NEXUXl-logo.png" alt="NEXUX" class="logo-img">
+        </div>
+        <nav class="navbar">
+            <a href="index.html" class="active">Início</a>
             <a href="servico.html">Serviços</a>
             <a href="clientes.html">Clientes</a>
             <a href="contato.html">Contato</a>
         </nav>
-    
     </header>
-    
-   
+
+
 
     <section>
         <h2>Bem-vindo ao grupo NEXUX</h2>
@@ -70,7 +30,7 @@
         <p>Nossos serviços são focados no mercado B2B. Oferecendo ao seu negócio a melhores soluções desenvolidas em WEB</p>
     </section>
 
-    <section >
+    <section>
         <!--Imagens ilustrativas dos serviços e produtos, imagens alternando falando um pouco sobre os serviços-->
     </section>
 
@@ -88,7 +48,10 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 NEXUX. Todos os direitos reservados.</p>
+        <div class="footer-info">
+            <p>&copy; 2024 NEXUX. Todos os direitos reservados.</p>
+        </div>
     </footer>
 </body>
+
 </html>
